# WFSEL

./: .gitignore  README.md  main.py  main_centroid.py  main_centroid_1x1.py  main_centroid_3x3.py  printnc.py  printshp.py  pyproject.toml  requirements.txt
lib/esa/: utils.py  vars.py
lib/geo/: utils.py  vars.py
lib/io/: utils.py  vars.py
scripts/: exec.sh
src/: __main__.py
src/lib/: get_and_save_geometry_masks.py  get_and_write_geometry_masks.py  print_nc.py  print_shp.py  printnc.py  printshp.py  utils.py
src/tests/: test_sample.py
src/util/: printnc.py  printshp.py
tests/: conftest.py  test_get_geometry_mask.py  test_save_geometry_mask.py  test_write_geometry_mask.py
tests/geo/: test_create_geometry_mask.py  test_write_geometry_mask.py
tools/batch/: batch_nc.sh
tools/db/: query_smoke_average_smoke_days_data.sql  query_smoke_data.sql  query_smoke_days.sql  query_smoke_days2.sql  query_smoke_days_data.sql  smoke_data.sql  write_esa_lakes_to_psql.py  write_esa_to_psql.py
tools/dv/: chla_data.py  data_var.py  ecv.py  sample.py  view_ecv.py
tools/io/: print_nc.py  print_shp.py
tools/sh/: batch_main.sh  batch_main_centroid.sh  batch_main_centroid_1x1.sh  batch_main_centroid_3x3.sh  fast_ecv.sh
