[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "WFSEL"
version = "1.0"
authors = [
  { name="William Chuter-Davies", email="wchuterdavies@unr.edu" },
]
dependencies = [
    "geopandas >= 1.1.3",
    "netcdf4   >= 1.7.4",
    "pytest    >= 9.1.1",
    "rasterio  >= 1.5.0",
    "xarray    >= 2026.4.0"
]

[tool.hatch.build.targets.wheel]
packages = ["lib"]