[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "WFSEL"
version = "1.0"
authors = [
  { name="William Chuter-Davies", email="wchuterdavies@unr.edu" },
]
dependencies = [
  "geopandas  >= 1.1.3",
  "matplotlib >= 3.11.1",
  "netcdf4    >= 1.7.4",
  "psycopg    >= 3.3.4",
  "pytest     >= 9.1.1",
  "rasterio   >= 1.5.0",
  "seaborn    >= 0.13.2",
  "scipy      >= 2.1.2",
  "tqdm       >= 4.68.3",
  "xarray     >= 2026.4.0"
]

[tool.hatch.build.targets.wheel]
packages = ["lib"]